fix wrapping issue on mobile

--- a/WebApp/ClientApp/src/components/home/topten/TopTenMobile.module.scss
+++ b/WebApp/ClientApp/src/components/home/topten/TopTenMobile.module.scss
@@ -16,6 +16,8 @@
 	}
 
 	.name {
-		white-space: nowrap;
+		@media (min-width: 768px) {
+			white-space: nowrap;
+		}
 	}
 }
